card-section-done

--- a/style.css
+++ b/style.css
@@ -70,3 +70,28 @@ h1 span{
 }
 
 /*-------------------book-section-end-----------------*/
+.card-section{
+    margin-top:50px;
+}
+.container h2{
+    color:#413960;
+    font-weight:700;
+    font-size:36px;
+    text-align:center;
+    margin-top:50px;
+}
+.card{
+    border:none;
+    box-shadow:5px 20px 16px gray;
+    border-radius:10px
+    
+}
+.card-footer{
+    background:none;
+    border-top:0px;
+}
+.card-footer p{
+    color:#585859;
+    font-size:16px;
+}
+/* -------------------Card-section-end------------------*/
