testimonial-section-done

--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ h1 span{
 }
 
 /*-------------------book-section-end-----------------*/
+
 .card-section{
     margin-top:50px;
 }
@@ -82,7 +83,7 @@ h1 span{
 }
 .card{
     border:none;
-    box-shadow:5px 20px 16px gray;
+    box-shadow:10px 5px 10px lightgray;
     border-radius:10px
     
 }
@@ -95,3 +96,15 @@ h1 span{
     font-size:16px;
 }
 /* -------------------Card-section-end------------------*/
+
+.testimonial-section {
+    margin-top: 50px;
+}
+.testimonial-section img{
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    display: block;
+    margin: 0 auto;
+}
+/*--------------------Testimonial-section-end---------------*/
