footer-section-done

--- a/style.css
+++ b/style.css
@@ -108,3 +108,33 @@ h1 span{
     margin: 0 auto;
 }
 /*--------------------Testimonial-section-end---------------*/
+
+footer{
+    
+    background-color: #282531;
+
+}
+.footer-section{
+    width: 1440px;
+    height:320px;
+    color:white;
+ 
+}
+.footer-section .row{
+    padding: 40px 40px;
+}
+.bold{
+    font-weight:bold;
+    font-size:24px;
+    color:white !important;
+    text-decoration: none;
+}
+.bold a{
+    background-color:none;
+    text-decoration:none;
+    padding:20px;
+}
+p{
+    text-align:center;
+    color:white;
+}
