--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
-
+*{
+    box-sizing:border-box;
+}
 body{
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
   
  
 }
+
 .bg{
     background:#F0FFF0;
 }
 .nav-section{
     width: 1440px;
     height:567px;
-    
+    background:#F0FFF0;
   
 }
 .navbar-light .navbar-nav .nav-link {
@@ -134,7 +137,6 @@ footer{
     text-decoration:none;
     padding:20px;
 }
-p{
-    text-align:center;
+.text-color{
     color:white;
 }
